--- a/media.html
+++ b/media.html
@@ -3,7 +3,7 @@
 		<h2>Television</h2>
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
-				<a href="http://rs.n1info.com/a245560/Vesti/Vesti/Istrazivanje-Srbi-okruzenje-vide-kao-neprijateljsko.html">
+				<a target="_blank" href="http://rs.n1info.com/a245560/Vesti/Vesti/Istrazivanje-Srbi-okruzenje-vide-kao-neprijateljsko.html">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
 						<img src='https://i.imgur.com/djcqVtl.jpg'>
@@ -87,7 +87,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
-				<a href="http://rs.n1info.com/a234111/Vesti/Vesti/Stavovi-gradjana-o-Rusiji-NATO-EU.html">
+				<a target="_blank" href="http://rs.n1info.com/a234111/Vesti/Vesti/Stavovi-gradjana-o-Rusiji-NATO-EU.html">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
 						<img src='https://i.imgur.com/fsCvL3B.jpg'>
@@ -99,7 +99,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6 col-md-offset-3">
-				<a href="http://rs.n1info.com/a208754/Vesti/Vesti/Popovic-Problem-su-ljudi-koji-regrutuju-borce-za-Siriju.html">
+				<a target="_blank" href="http://rs.n1info.com/a208754/Vesti/Vesti/Popovic-Problem-su-ljudi-koji-regrutuju-borce-za-Siriju.html">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
 						<img src='https://i.imgur.com/p7puQpU.jpg'>
@@ -114,7 +114,7 @@
 		<h2 style="margin-top:20px;">Radio</h2>
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
-				<a href="http://www.rts.rs/page/radio/sr/story/23/radio-beograd-1/2750599/novinarenje.html">
+				<a target="_blank" href="http://www.rts.rs/page/radio/sr/story/23/radio-beograd-1/2750599/novinarenje.html">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
 						<img src='https://i.imgur.com/HNAkvBP.jpg'>
@@ -138,7 +138,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
-				<a href="http://www.rts.rs/page/radio/sr/story/23/radio-beograd-1/2588089/.html">
+				<a target="_blank" href="http://www.rts.rs/page/radio/sr/story/23/radio-beograd-1/2588089/.html">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
 						<img src='https://i.imgur.com/9MyLXzG.jpg'>
@@ -174,7 +174,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
-				<a href="http://www.rts.rs/page/radio/ci/story/27/radio-beograd-1/2389551/novinarenje.html">
+				<a target="_blank" href="http://www.rts.rs/page/radio/ci/story/27/radio-beograd-1/2389551/novinarenje.html">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
 						<img src='https://i.imgur.com/CvBPuUZ.jpg'>
@@ -186,7 +186,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
-				<a href="http://www.rts.rs/page/radio/ci/story/27/%D0%A0%D0%B0%D0%B4%D0%B8%D0%BE+%D0%91%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D0%B4+1/2260086/%D0%A2%D0%B0%D0%BB%D0%B0%D1%81%D0%B0%D1%9A%D0%B5+.html">
+				<a target="_blank" href="http://www.rts.rs/page/radio/ci/story/27/%D0%A0%D0%B0%D0%B4%D0%B8%D0%BE+%D0%91%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D0%B4+1/2260086/%D0%A2%D0%B0%D0%BB%D0%B0%D1%81%D0%B0%D1%9A%D0%B5+.html">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
 						<img src='https://i.imgur.com/0PvEEmX.jpg'>
@@ -198,7 +198,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
-				<a href="http://www.rts.rs/page/radio/ci/story/27/%D0%A0%D0%B0%D0%B4%D0%B8%D0%BE+%D0%91%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D0%B4+1/1743355/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D0%B0%D1%80%D0%B5%D1%9A%D0%B5.html">
+				<a target="_blank" href="http://www.rts.rs/page/radio/ci/story/27/%D0%A0%D0%B0%D0%B4%D0%B8%D0%BE+%D0%91%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D0%B4+1/1743355/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D0%B0%D1%80%D0%B5%D1%9A%D0%B5.html">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
 						<img src='https://i.imgur.com/hemygvC.jpg'>
@@ -210,7 +210,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6 col-md-offset-3">
-				<a href="http://www.rts.rs/page/radio/ci/story/27/%D0%A0%D0%B0%D0%B4%D0%B8%D0%BE+%D0%91%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D0%B4+1/1306078/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D0%B0%D1%80%D0%B5%D1%9A%D0%B5.html">
+				<a target="_blank" href="http://www.rts.rs/page/radio/ci/story/27/%D0%A0%D0%B0%D0%B4%D0%B8%D0%BE+%D0%91%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D0%B4+1/1306078/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D0%B0%D1%80%D0%B5%D1%9A%D0%B5.html">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
 						<img src='https://i.imgur.com/YVqbV9n.jpg'>
@@ -237,7 +237,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
-				<a href="http://bezbednost.org/Sve-publikacije/6483/Stavovi-gradjana-o-spoljnoj-politici-Srbije.shtml">
+				<a target="_blank" href="http://bezbednost.org/Sve-publikacije/6483/Stavovi-gradjana-o-spoljnoj-politici-Srbije.shtml">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
 						<img src='https://i.imgur.com/nkAhGCE.jpg'>
@@ -249,7 +249,7 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
-				<a href="http://rs.n1info.com/a228078/Vesti/Vesti/BCBP-Najveca-pretnja-korupcija-politicari-i-losa-vlast.html">
+				<a target="_blank" href="http://rs.n1info.com/a228078/Vesti/Vesti/BCBP-Najveca-pretnja-korupcija-politicari-i-losa-vlast.html">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
 						<img src='https://i.imgur.com/tjjWz9k.jpg'>
