--- a/maps.html
+++ b/maps.html
@@ -25,7 +25,9 @@
 			
 			-->
 		
-		
+		<span>
+				
+			</span>
 		
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/firesnasa.png">
