--- a/maps.html
+++ b/maps.html
@@ -340,6 +340,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/communist_terror.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/communist_terror.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Communist Crimes in Serbia (1944-1953)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/serbia1895_illiteracy2.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
