--- a/maps.html
+++ b/maps.html
@@ -328,12 +328,24 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/protests.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/protests.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Anti-Regime Protests in Serbia (English)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/protesti.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
 						<img src='maps/protesti.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Anti-Regime Protests in Serbia</div>
+							<div class='opis'>Anti-Regime Protests in Serbia (Serbian)</div>
 						</div>
 					</div>
 				</a>
