--- a/maps.html
+++ b/maps.html
@@ -40,6 +40,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/petro_eur.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/petro_eur.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Gas and Oil Deposits in Europe</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/tourism100k.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
