--- a/interactiveMaps.html
+++ b/interactiveMaps.html
@@ -22,6 +22,18 @@
 			</div>
 			
 			-->
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/interactive/protests/index.html">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='https://i.imgur.com/lAN76nB.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Protests in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
 		
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/interactive/ruleoflaw/index.html">
