--- a/maps.html
+++ b/maps.html
@@ -376,6 +376,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/protesti_proc.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/protesti_proc.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Estimate of the Number of Protesters in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/communist_terror.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
