--- a/maps.html
+++ b/maps.html
@@ -381,7 +381,7 @@
 						<i class='fa fa-image ikonica'></i>
 						<img src='maps/protesti_proc.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Estimate of the Number of Protesters in Serbia</div>
+							<div class='opis'>Estimated Number of Protesters in Serbia</div>
 						</div>
 					</div>
 				</a>
