--- a/maps.html
+++ b/maps.html
@@ -25,7 +25,17 @@
 			
 			-->
 		
-		
+		<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/troops.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/troops.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Foreign Military Deployment of Major Powers in 2017</div>
+						</div>
+					</div>
+				</a>
+			</div>
 		
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/firesnasa.png">
