--- a/maps.html
+++ b/maps.html
@@ -374,6 +374,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/poslanici.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/poslanici.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Distribution of MPs in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/protests.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
