--- a/maps.html
+++ b/maps.html
@@ -50,6 +50,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/gasimports.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/gasimports.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Major Importers of Russian Gas in Europe</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/female_researchers.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
