--- a/maps.html
+++ b/maps.html
@@ -62,6 +62,42 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/birth.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/birth.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Mother's Average Age at Birth of First Child</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/eu_employment2016b.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/eu_employment2016b.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Employment in the EU by NUTS Regions</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/immigration.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/immigration.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Perception of Immigrants in the EU</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/gasimports.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
