us casualties in iraq

--- a/maps.html
+++ b/maps.html
@@ -446,6 +446,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/usa_iraq2.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/usa_iraq2.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>US Casualties in Iraq (2003-2017)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/poslanici.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
