--- a/maps.html
+++ b/maps.html
@@ -62,6 +62,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/violence_vs_women.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/violence_vs_women.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Violence Against Women</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/wage2018.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
