--- a/maps.html
+++ b/maps.html
@@ -494,6 +494,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/us_rni.gif">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/us_rni.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Estimated Rate of Natural Increase</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/unemploy.gif">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
