--- a/maps.html
+++ b/maps.html
@@ -578,6 +578,90 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2srb_all.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2srb_all.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>World War II Casualties in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2srb_womenchildren2.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2srb_womenchildren2.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Women and Children: World War II Casualties in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2srb_age.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2srb_age.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Median Age of World War II Casualties in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2srb_partisans.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2srb_partisans.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Partisan Casualties of World War II in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2srb_jews.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2srb_jews.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Jewish Casualties of World War II in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2srb_roma.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2srb_roma.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Roma Casualties of World War II in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2srb_camp.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2srb_camp.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Camp Victims Casualties of World War II in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/communist_terror.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
