--- a/maps.html
+++ b/maps.html
@@ -1210,6 +1210,103 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2hrv_all.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2hrv_all.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>World War II Casualties in Croatia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2hrv_women.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2hrv_women.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Women and Children: World War II Casualties in Croatia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2hrv_age.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2hrv_age.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Median Age of World War II Casualties in Croatia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2hrv_partisans.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2hrv_partisans.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Partisan Casualties of World War II in Croatia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2hrv_serbs.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2hrv_serbs.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Serb Casualties of World War II in Croatia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2hrv_croats.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2hrv_croats.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Croat Casualties of World War II in Croatia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2hrv_jews.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2hrv_jews.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Jewish Casualties of World War II in Croatia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ww2hrv_roma.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ww2hrv_roma.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Roma Casualties of World War II in Croatia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+					
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/oluja.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
