--- a/maps.html
+++ b/maps.html
@@ -24,6 +24,66 @@
 			</div>
 			
 			-->
+			
+		<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ci2.gif">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ci2.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>China's Confucius Institutes</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+		<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/fdichina.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/fdichina.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>The Destination of China's FDI</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+		<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/child_abuse.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/child_abuse.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Child Abuse</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+		<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/coups2.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/coups2.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Successful Coup Attempts</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+		<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/coups3.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/coups3.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Failed Coup Attempts</div>
+						</div>
+					</div>
+				</a>
+			</div>
 		
 		<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/troops.png">
@@ -56,6 +116,54 @@
 						<img src='maps/acled.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>Protests, Violence and War</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/salafi.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/salafi.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Salafi Victimization of Civilians (2017-2018)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/daesh.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/daesh.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Civilians Killed by Daesh (2014-2018)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/rus_protests.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/rus_protests.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Protests in Russia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/syr.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/syr.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Air and Drone Strikes in Syria (2017-2018) </div>
 						</div>
 					</div>
 				</a>
@@ -488,6 +596,30 @@
 						<img src='maps/youthunemploy.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>Youth Unemployment in Europe</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/eur1000.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/eur1000.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>European Places with Over 1,000 Inhabitants</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/eur50gdppc.gif">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/eur50gdppc.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>GDP per capita PPP in Europe (1950-1990)</div>
 						</div>
 					</div>
 				</a>
@@ -1026,6 +1158,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/yu_camps_92.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/yu_camps_92.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Camps in Former Yugoslavia (1991-1994)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/ethnic53.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
@@ -1210,6 +1354,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/rs_pop.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/rs_pop.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Population Density in The Serb Republic and Brcko District (2013)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/ww2hrv_all.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
@@ -1300,6 +1456,18 @@
 						<img src='maps/ww2hrv_roma.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>Roma Casualties of World War II in Croatia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/hrv2.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/hrv2.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Killed and Kidnapped Serbs in the Croatian Civil War (1991-1995)</div>
 						</div>
 					</div>
 				</a>
