--- a/maps.html
+++ b/maps.html
@@ -1342,6 +1342,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/dot_density_age.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/dot_density_age.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Age Groups of Bosnia and Herzegovina (2013)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/izbori_bih.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
