--- a/maps.html
+++ b/maps.html
@@ -1522,7 +1522,7 @@
 				</a>
 			</div>
 			
-			<div class="col-xs-12 col-md-6 col-md-offset-3">
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/ndh.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
