Adding blog page with new blog post template

--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@
 				<a target="_blank" href="documents/alliances.pdf">
 					<div class='kartica'>
 						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/duamrqE.jpg'>
+						<img src='https://i.imgur.com/duamrqE.jpg' />
 						<div class='tekstKartice'>
 							<div class='opis'>Inter-Rebel Alliances</div>
 						</div>
@@ -18,7 +18,7 @@
 				<a target="_blank" href="documents/managing.pdf">
 					<div class='kartica'>
 						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/Q8vwe8I.jpg'>
+						<img src='https://i.imgur.com/Q8vwe8I.jpg' />
 						<div class='tekstKartice'>
 							<div class='opis'>Managing Internationalized Civil Wars</div>
 						</div>
@@ -31,7 +31,7 @@
 				<a target="_blank" href="documents/rhetoric.pdf">
 					<div class='kartica'>
 						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/iYYs0v6.jpg'>
+						<img src='https://i.imgur.com/iYYs0v6.jpg' />
 						<div class='tekstKartice'>	
 							<div class='opis'>Rhetoric of Civil Conflict Management</div>						
 						</div>
@@ -43,7 +43,7 @@
 				<a target="_blank" href="http://www.tandfonline.com/doi/abs/10.1080/1057610X.2015.1063838">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
-						<img src='https://i.imgur.com/IEmR0fX.jpg'>
+						<img src='https://i.imgur.com/IEmR0fX.jpg' />
 						<div class='tekstKartice'>							
 							<div class='opis'>The Perils of Weak Organization</div>
 						</div>
@@ -54,7 +54,7 @@
 				<a target="_blank" href="http://www.tandfonline.com/doi/abs/10.1080/09546553.2015.1092437">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
-						<img src='https://i.imgur.com/YkoZ4xQ.jpg'>
+						<img src='https://i.imgur.com/YkoZ4xQ.jpg' />
 						<div class='tekstKartice'>
 							<div class='opis'>Fragile Proxies</div>
 						</div>
@@ -69,7 +69,7 @@
 				<a target="_blank" href="documents/serbia.pdf">
 					<div class='kartica'>
 						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/Azik7LA.jpg'>
+						<img src='https://i.imgur.com/Azik7LA.jpg' />
 						<div class='tekstKartice'>
 							<div class='opis'>Serbia and Major Powers</div>
 						</div>
