--- a/teaching.html
+++ b/teaching.html
@@ -6,7 +6,7 @@
 				<a target="_blank" href="documents/teaching.pdf">
 					<div class='kartica'>
 						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/Z0ryrkY.jpg'>
+						<img src='https://i.imgur.com/Z0ryrkY.jpg' />
 						<div class='tekstKartice'>		
 							<div class='opis'>How do I teach?</div>
 						</div>
@@ -17,7 +17,7 @@
 				<a target="_blank" href="documents/syllabus.pdf">
 					<div class='kartica'>
 						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/V9652ra.jpg'>
+						<img src='https://i.imgur.com/V9652ra.jpg' />
 						<div class='tekstKartice'>		
 							<div class='opis'>What do I teach?</div>
 						</div>
