--- a/cv.html
+++ b/cv.html
@@ -1,12 +1,12 @@
 <div class="row opensModal">
 	<div id='cv' class="col-xs-12 col-md-6 col-md-offset-2">
-		<h2>My CV and Resume</h1>
+		<h2>My CV and Resume</h2>
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="documents/cv.pdf">
 					<div class='kartica'>
 						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/VmNxSil.jpg'>
+						<img src='https://i.imgur.com/VmNxSil.jpg' />
 						<div class='tekstKartice'>		
 							<div class='opis'>Download my academic CV</div>
 						</div>
@@ -17,7 +17,7 @@
 				<a target="_blank" href="documents/resume.pdf">
 					<div class='kartica'>
 						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/Q8G9BXZ.jpg'>
+						<img src='https://i.imgur.com/Q8G9BXZ.jpg' />
 						<div class='tekstKartice'>
 							<div class='opis'>Download my professional resume</div>
 						</div>
