--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Ubuntu:400,400i&display=swap" rel="stylesheet">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 <link rel="icon" href="icon.jpg">
@@ -9,6 +10,7 @@
 <link rel="stylesheet" href="academicons/css/academicons.css"/>
 <link rel="stylesheet" type="text/css" href="site.css?v=1.1">
 <title>Milos Popovic</title>
+<meta charset="utf-8"/>
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Milos Popovic's personal website" />
@@ -50,7 +52,7 @@
 			<a href="https://www.researchgate.net/profile/Milos_Popovic7"><i class="ai ai-researchgate"></i></a>
 			<a href="https://scholar.google.com/citations?user=KNhu3ksAAAAJ"><i class="ai ai-google-scholar"></i></a>
 		</div>
-		<div class="copyright">Copyright &copy; 2018 Milos Popovic. All rights reserved.</div>
+		<div class="copyright">Copyright &copy; 2020 Milos Popovic. All rights reserved.</div>
 	</div>
 	<div class="box">
 		<div class="hamburger">
@@ -60,6 +62,7 @@
 		</div>
 		<div class="menu">
 			<div class="menuItem" data-item="#aboutMe">about me</div>
+			<div class="menuItem" data-item="#blog">blog</div>
 			<div class="menuItem" data-item="#cv">cv</div>
 			<div class="menuItem" data-item="#research">research</div>
 			<div class="menuItem" data-item="#teaching">teaching</div>
@@ -71,7 +74,7 @@
 	</div>
 	<div id="content" class="col-xs-12">
 		<div class="row">
-			<div id="aboutMe" class="col-md-4 col-md-offset-3 col-xs-10 col-xs-offset-1 active">
+			<div id="aboutMe" class="col-md-4 col-md-offset-3 col-xs-12 active">
 				<h2>Hi, I'm Milos</h2>
 				<div id='blockOfText'>
 					<p>I work as a Marie Curie Post-Doctoral Fellow at the Institute of Security and Global Affairs (ISGA) at Leiden University on post-war pathways of foreign fighters. Previously, I worked as a Post-Doctoral Fellow at the Center on the Future of War at Arizona State University, and a Research Consultant for Columbia University in New York on a Minerva project exploring major power rivalry. I also taught research design and qualitative methods at Central European University. With the rise of ISIS, I took part in policy debates about terrorism and military intervention and appeared on a number of TV channels including N1 (the CNN affiliate in the Western Balkans), Serbian National Television and Al-Jazeera Balkans. My research interests are at the intersection of civil war dynamics and postwar politics in the Balkans.</p>
