NDH and Jasenovac maps
NDH and Jasenovac dot-density maps

--- a/maps.html
+++ b/maps.html
@@ -794,6 +794,18 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/dot_density_jews_srb.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/dot_density_jews_srb.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Identified Jewish Victims for Serbia (1941-1945)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/communist_terror.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
@@ -1140,6 +1152,18 @@
 						<img src='maps/ww2.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>Killed civilians, partisans and regular soldiers of Kingdom of Yugoslavia (1941-1945)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/dot_density_jasenovac_ethno_b.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/dot_density_jasenovac_ethno_b.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Identified Victims of the Jasenovac Concentration Camp Complex by Nationality (1941-1945)</div>
 						</div>
 					</div>
 				</a>
@@ -1517,6 +1541,42 @@
 						<img src='maps/yu_ratovi.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>Killed and disappeared Serbian and Montenegrian Citizens in Wars in Bosnia, Croatia and Slovenia (1991-1995) </div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/dot_density_ndh_total_ww2.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/dot_density_ndh_total_ww2.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Total Identified Deaths for the Indepepndent State of Croatia (1941-1945)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/dot_density_ndh_women_chil_ww2.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/dot_density_ndh_women_chil_ww2.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>The Death Toll of Women and Children for the Indepepndent State of Croatia (1941-1945)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/dot_density_jews_ndh.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/dot_density_jews_ndh.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Identified Jewish Victims for the Indepepndent State of Croatia (1941-1945)</div>
 						</div>
 					</div>
 				</a>
