--- a/maps.html
+++ b/maps.html
@@ -1582,6 +1582,18 @@
 				</a>
 			</div>
 			
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/dot_density_roma_ndh.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/dot_density_roma_ndh.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Identified Roma Victims for the Indepepndent State of Croatia (1941-1945)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
 			<div class="col-xs-12 col-md-6 col-md-offset-3">
 				<a target="_blank" href="maps/full/ndh.png">
 					<div class='kartica'>
