--- a/interactiveMaps.html
+++ b/interactiveMaps.html
@@ -27,7 +27,7 @@
 				<a target="_blank" href="maps/interactive/covid19netherlands/covid19netherlands.html">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
-						<img src='https://imgur.com/OBhITMD'>
+						<img src='https://imgur.com/OBhITMD.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>COVID 19 Cases in the Netherlands</div>
 						</div>
