--- a/interactiveMaps.html
+++ b/interactiveMaps.html
@@ -24,6 +24,18 @@
 			-->
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/interactive/covid19italy/covid19italy.html">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='https://imgur.com/Ca9BlK5.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>COVID 19 Cases in Italy</div>
+						</div>
+					</div>
+				</a>
+			</div>
+				
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/interactive/covid19netherlands/covid19netherlands.html">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
