--- a/interactiveMaps.html
+++ b/interactiveMaps.html
@@ -24,6 +24,18 @@
 			-->
 			
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/interactive/covid19svn/covid19svn.html">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='https://imgur.com/5xZR7Df.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>COVID-19 Cases in Slovenia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+			
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/interactive/covid19italy/covid19italy.html">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
