--- a/interactiveMaps.html
+++ b/interactiveMaps.html
@@ -51,7 +51,7 @@
 				<a target="_blank" href="maps/interactive/covid19netherlands/covid19netherlands.html">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
-						<img src='https://imgur.com/BfmCwrl.jpg'>
+						<img src='https://imgur.com/iQbN209.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>COVID 19 Cases in the Netherlands</div>
 						</div>
