--- a/research.html
+++ b/research.html
@@ -25,8 +25,7 @@
 					</div>
 				</a>
 			</div>
-		</div>
-		<div class="row">
+
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="documents/rhetoric.pdf">
 					<div class='kartica'>
@@ -50,7 +49,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-xs-12 col-md-6 col-md-offset-3">	
+			<div class="col-xs-12 col-md-6">	
 				<a target="_blank" href="http://www.tandfonline.com/doi/abs/10.1080/09546553.2015.1092437">
 					<div class='kartica'>
 						<i class='fa fa-external-link ikonica'></i>
