--- a/research.html
+++ b/research.html
@@ -1,80 +1,91 @@
 <div class="row opensModal">
-	<div id='research' class="col-md-6 col-md-offset-2 col-xs-12">
-		<h2>Published work</h2>
-		
-		<div class="row">
-			<div class="col-xs-12 col-md-6">
-				<a target="_blank" href="documents/alliances.pdf">
-					<div class='kartica'>
-						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/duamrqE.jpg' />
-						<div class='tekstKartice'>
-							<div class='opis'>Inter-Rebel Alliances</div>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="col-xs-12 col-md-6">	
-				<a target="_blank" href="documents/managing.pdf">
-					<div class='kartica'>
-						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/Q8vwe8I.jpg' />
-						<div class='tekstKartice'>
-							<div class='opis'>Managing Internationalized Civil Wars</div>
-						</div>
-					</div>
-				</a>
-			</div>
+  <div id="research" class="col-md-6 col-md-offset-2 col-xs-12">
+    <h2>Published work</h2>
 
-			<div class="col-xs-12 col-md-6">
-				<a target="_blank" href="documents/rhetoric.pdf">
-					<div class='kartica'>
-						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/iYYs0v6.jpg' />
-						<div class='tekstKartice'>	
-							<div class='opis'>Rhetoric of Civil Conflict Management</div>						
-						</div>
-					</div>
-				</a>
-			</div>
-		
-			<div class="col-xs-12 col-md-6">
-				<a target="_blank" href="http://www.tandfonline.com/doi/abs/10.1080/1057610X.2015.1063838">
-					<div class='kartica'>
-						<i class='fa fa-external-link ikonica'></i>
-						<img src='https://i.imgur.com/IEmR0fX.jpg' />
-						<div class='tekstKartice'>							
-							<div class='opis'>The Perils of Weak Organization</div>
-						</div>
-					</div>
-				</a>
-			</div>
-			<div class="col-xs-12 col-md-6">	
-				<a target="_blank" href="http://www.tandfonline.com/doi/abs/10.1080/09546553.2015.1092437">
-					<div class='kartica'>
-						<i class='fa fa-external-link ikonica'></i>
-						<img src='https://i.imgur.com/YkoZ4xQ.jpg' />
-						<div class='tekstKartice'>
-							<div class='opis'>Fragile Proxies</div>
-						</div>
-					</div>
-				</a>
-			</div>
-		</div>
-		<h2 style="margin-top:50px;">Other publications</h2>
-		
-		<div class="row">
-			<div class="col-xs-12 col-md-6 col-md-offset-3">
-				<a target="_blank" href="documents/serbia.pdf">
-					<div class='kartica'>
-						<i class='fa fa-file-pdf-o ikonica'></i>
-						<img src='https://i.imgur.com/Azik7LA.jpg' />
-						<div class='tekstKartice'>
-							<div class='opis'>Serbia and Major Powers</div>
-						</div>
-					</div>
-				</a>
-			</div>
-		</div>
-	</div>
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <a target="_blank" href="documents/alliances.pdf">
+          <div class="kartica">
+            <i class="fa fa-file-pdf-o ikonica"></i>
+            <img src="https://i.imgur.com/duamrqE.jpg" />
+            <div class="tekstKartice">
+              <div class="opis">Inter-Rebel Alliances</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <a target="_blank" href="documents/managing.pdf">
+          <div class="kartica">
+            <i class="fa fa-file-pdf-o ikonica"></i>
+            <img src="https://i.imgur.com/Q8vwe8I.jpg" />
+            <div class="tekstKartice">
+              <div class="opis">Managing Internationalized Civil Wars</div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <a target="_blank" href="documents/rhetoric.pdf">
+          <div class="kartica">
+            <i class="fa fa-file-pdf-o ikonica"></i>
+            <img src="https://i.imgur.com/iYYs0v6.jpg" />
+            <div class="tekstKartice">
+              <div class="opis">Rhetoric of Civil Conflict Management</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <a
+          target="_blank"
+          href="http://www.tandfonline.com/doi/abs/10.1080/1057610X.2015.1063838"
+        >
+          <div class="kartica">
+            <i class="fa fa-external-link ikonica"></i>
+            <img src="https://i.imgur.com/IEmR0fX.jpg" />
+            <div class="tekstKartice">
+              <div class="opis">The Perils of Weak Organization</div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <a
+          target="_blank"
+          href="http://www.tandfonline.com/doi/abs/10.1080/09546553.2015.1092437"
+        >
+          <div class="kartica">
+            <i class="fa fa-external-link ikonica"></i>
+            <img src="https://i.imgur.com/YkoZ4xQ.jpg" />
+            <div class="tekstKartice">
+              <div class="opis">Fragile Proxies</div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <h2 style="margin-top:50px;">Other publications</h2>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <a target="_blank" href="documents/serbia.pdf">
+          <div class="kartica">
+            <i class="fa fa-file-pdf-o ikonica"></i>
+            <img src="https://i.imgur.com/Azik7LA.jpg" />
+            <div class="tekstKartice">
+              <div class="opis">Serbia and Major Powers</div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
