Template za dodavanje novih research kartica

--- a/research.html
+++ b/research.html
@@ -89,3 +89,42 @@
     </div>
   </div>
 </div>
+
+<!-- Template za dodavanje research kartica: 
+- Prekopiraj DIV ispod 
+- Ako dodaješ karticu u postojeći "row" (u svaki "row" idu maksimalno 2 kartice):
+
+<div class="col-xs-12 col-md-6 col-md-offset-3">
+  <a target="_blank" href="LINK_KA_SAJTU_ILI_FAJLU">
+    <div class="kartica">
+      <i class="fa IKONICA_ZA_LINK_ILI_FAJL ikonica"></i>
+      <img src="LINK_KA_SLICI" />
+      <div class="tekstKartice">
+        <div class="opis">TEKST_NA_KARTICI</div>
+      </div>
+    </div>
+  </a>
+</div>
+
+- Ako dodaješ karticu u novi row:
+
+<div class="row">
+  <div class="col-xs-12 col-md-6 col-md-offset-3">
+    <a target="_blank" href="LINK_KA_SAJTU_ILI_FAJLU">
+      <div class="kartica">
+        <i class="fa IKONICA_ZA_LINK_ILI_FAJL ikonica"></i>
+        <img src="LINK_KA_SLICI" />
+        <div class="tekstKartice">
+          <div class="opis">TEKST_NA_KARTICI</div>
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
+
+- LINK_KA_SAJTU_ILI_FAJLU zameniš sa direktnim linkom ka sajtu ili pdf-u
+- IKONICA_ZA_LINK_ILI_FAJL zavisi od toga da li kačiš link ka sajtu ili ka pdf fajlu
+ - ako je sajt onda je fa-external-link, pa ceo tag izgleda ovako: <i class="fa fa-external-link ikonica"></i>
+ - ako je pdf fajl onda je fa-file-pdf-o, pa ceo tag izgleda ovako <i class="fa fa-file-pdf-o ikonica"></i>
+- LINK_KA_SLICI zameniš sa direktnim linkom ka slici koju si okačio na imgur (optimalne dimenzije sam ti poslao ranije na email)
+- TEKST_NA_KARTICI zameniš sa tekstom koji hoćeš da ti piše na kartici -->
