--- a/research.html
+++ b/research.html
@@ -75,7 +75,7 @@
     <h2 style="margin-top:50px;">Other publications</h2>
 
     <div class="row">
-      <div class="col-xs-12 col-md-6 col-md-offset-3">
+      <div class="col-xs-12 col-md-6">
         <a target="_blank" href="documents/serbia.pdf">
           <div class="kartica">
             <i class="fa fa-file-pdf-o ikonica"></i>
