--- a/maps.html
+++ b/maps.html
@@ -168,6 +168,54 @@
 					</div>
 				</a>
 			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/nuts_inhdoctors.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/nuts_inhdoctors.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Number of Europeans per Medical Doctor (2017)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/elderly_docs_2017b.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/elderly_docs_2017b.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Senior Citizens Per Medical Doctor (2017)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/hospital_beds_elderly_2017.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/hospital_beds_elderly_2017.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Senior Citizens Per Available Hospital Bed (2017)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/nuts_computer.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/nuts_computer.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>European Who Never Used a Computer (2017)</div>
+						</div>
+					</div>
+				</a>
+			</div>
 			
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/eu_neet.gif">
@@ -656,6 +704,138 @@
 						<img src='maps/usa_iraq2.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>US Casualties in Iraq (2003-2017)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/covid19naselja.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/covid19naselja.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>COVID-19 Cases by Settlement on 14 April 2020</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/turnout_perc_2014.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/turnout_perc_2014.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Voter Turnout in the 2014 Serbian Parliamentary Election</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/turnout_perc_2016.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/turnout_perc_2016.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Voter Turnout in the 2016 Serbian Parliamentary Election</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/sns_perc_2014.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/sns_perc_2014.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>The 2014 Election Results for the Serbian Progressive Party</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/sns_perc_2016.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/sns_perc_2016.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>The 2016 Election Results for the Serbian Progressive Party</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/sps_perc_2014.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/sps_perc_2014.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>The 2014 Election Results for the Socialist Party of Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/sps_perc_2016.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/sps_perc_2016.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>The 2016 Election Results for the Socialist Party of Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ds_perc_2014.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ds_perc_2014.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>The 2014 Election Results for the Democratic Party</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ds_perc_2016.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ds_perc_2016.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>The 2016 Election Results for the Democratic Party</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/djb_perc_2014.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/djb_perc_2014.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>The 2014 Election Results for the Enough-is-Enough Party</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/djb_perc_2016.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/djb_perc_2016.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>The 2016 Election Results for the Enough-is-Enough Party</div>
 						</div>
 					</div>
 				</a>
@@ -1378,12 +1558,12 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
-				<a target="_blank" href="maps/full/izbori_bih.png">
+				<a target="_blank" href="maps/full/dot_density_bih_ethno_2013b.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
-						<img src='maps/izbori_bih.jpg'>
+						<img src='maps/dot_density_bih_ethno_2013b.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>2018 Parliamentary Election in Bosnia and Herzegovina</div>
+							<div class='opis'>The Ethnic Composition of Bosnia and Herzegovina by Settlement (2013)</div>
 						</div>
 					</div>
 				</a>
@@ -1552,7 +1732,19 @@
 						<i class='fa fa-image ikonica'></i>
 						<img src='maps/dot_density_ndh_total_ww2.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Total Identified Deaths for the Indepepndent State of Croatia (1941-1945)</div>
+							<div class='opis'>Total Identified Death Toll for the Independent State of Croatia (1941-1945)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ndh_losses.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ndh_losses.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Estimated Human Losses for the Independent State of Croatia (1941-1945)</div>
 						</div>
 					</div>
 				</a>
@@ -1564,7 +1756,7 @@
 						<i class='fa fa-image ikonica'></i>
 						<img src='maps/dot_density_ndh_women_chil_ww2.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>The Death Toll of Women and Children for the Indepepndent State of Croatia (1941-1945)</div>
+							<div class='opis'>The Death Toll of Women and Children for the Independent State of Croatia (1941-1945)</div>
 						</div>
 					</div>
 				</a>
@@ -1576,7 +1768,7 @@
 						<i class='fa fa-image ikonica'></i>
 						<img src='maps/dot_density_jews_ndh.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Identified Jewish Victims for the Indepepndent State of Croatia (1941-1945)</div>
+							<div class='opis'>Identified Jewish Victims for the Independent State of Croatia (1941-1945)</div>
 						</div>
 					</div>
 				</a>
@@ -1588,7 +1780,7 @@
 						<i class='fa fa-image ikonica'></i>
 						<img src='maps/dot_density_roma_ndh.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Identified Roma Victims for the Indepepndent State of Croatia (1941-1945)</div>
+							<div class='opis'>Identified Roma Victims for the Independent State of Croatia (1941-1945)</div>
 						</div>
 					</div>
 				</a>
